# automate-elt-github

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
data/: README.md
pipeline/: README.md  pipeline.yaml
pipeline/etl/: Automatizando-etl-github.ipynb  automating-etl-github.ipynb  automating-etl-github.slides.html  extractdata.py  redshift-data-population.ipynb  save_wrangled_tables.py  wrangle-data.ipynb
pipeline/etl/images/: cicd.drawio  etl-diagram.drawio
tests/: README.md  test_download.py
